[package]
name = "nhdl"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.27.0", features = ["yaml"] }
futures = "0.3.18"
image = "0.23.14"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12.0"
select = "0.5.0"
textwrap = "0.14.2"
tokio = { version = "1.12.0", features = ["full"] }
toml = "0.5"
