[package]
name = "nhdl"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.27.0", features = ["yaml"] }
futures = "0.3.19"
image = "0.23.14"
regex = "1.5.4"
reqwest = { version = "0.11.8", features = ["blocking"] }
select = "0.5.0"
textwrap = "0.14.2"
tokio = { version = "1.15.0", features = ["full"] }
toml = "0.5"
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.4"
